Changes made: (Dec. 5, 2024 | 5:21 PM)
- PWD can register to events
- interviews, events and any other activities are displayed already in calendar

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1900,7 +1900,7 @@ table tbody .bx {
 }
 
 .fc-h-event .fc-event-title-container {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
     border: none;
     border-radius: var(--border-radius);
     padding: 0.3rem;
