Changes made: ( Dec. 8, 2024 | 5:39 PM)
- added manual verification by admin
- added old values retrieved even refreshed
- cleaned the backend side: removed comments, fixed the structure, and fixed the spacing
- employers and agencies cannot login if account not activated by admin
- proper prompts

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -115,8 +115,22 @@ li {
 }
 
 .deny-btn {
-    padding: 1rem;
+    padding: 0.5rem;
     color: var(--text-error);
+    background-color: transparent;
+    font-weight: bold;
+}
+
+.set-btn {
+    padding: 0.5rem;
+    color: var(--color-01);
+    background-color: transparent;
+    font-weight: bold;
+}
+
+.activate-btn {
+    padding: 0.5rem;
+    color: var(--primary-color);
     background-color: transparent;
     font-weight: bold;
 }
@@ -1913,6 +1927,13 @@ table tbody .bx {
 
 .fc-toolbar-title {
     font-weight: var(--header-extrabold);
+}
+
+.fc-event-time {
+    font-size: 32px;
+    font-weight: bold;
+    color: var(--bg-color-01);
+    font-family: Arial, sans-serif;
 }
 
 /* .fc-view-harness {
