--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1715,7 +1715,8 @@ input[type="range"]::-webkit-slider-thumb {
     text-align: center;
 }
 
-.trainings-container .table tbody tr .match-info {
+.trainings-container .table tbody tr .match-info,
+.users-container .table tbody tr .match-info {
     /* margin-bottom: 1rem; */
     /* padding-top: 0.5rem; */
     /* width: 5rem; */
@@ -1724,10 +1725,18 @@ input[type="range"]::-webkit-slider-thumb {
     width: 100%;
 }
 
-.trainings-container .table tbody tr .match-info.pending {
+.trainings-container .table tbody tr .match-info.pending,
+.users-container .table tbody tr .match-info.pending {
     background-color: var(--color-01-light);
     color: var(--color-01);
     border-color: var(--color-01);
+}
+
+.trainings-container .table tbody tr .match-info.denied,
+.users-container .table tbody tr .match-info.denied {
+    background-color: var(--color-02-light);
+    color: var(--color-02);
+    border-color: var(--color-02);
 }
 
 .trainings-container .table tbody tr td a {
